# codecrafterAPI

./: CMakeLists.txt
src/: main.cpp
src/codecrafter/: codecrafter.cpp  codecrafter.hpp
src/subprocess/: subprocess.cpp
src/tools/filesystem/: filesystem.cpp  filesystem.hpp
src/tools/parser/: parser.cpp
